k8s/Mysql.yaml
# nonk8s
apiVersion: networking.k8s.io/v1
kind: Service
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: krampoline
  namespace: default
spec:
  rules:
    - http:
        paths:
          - mysql:
              serviceName: krampoline
              servicePort: 3000
              path: /
              pathType: Prefix
