k8s/krampoline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krampoline
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: kargocd
spec:
  rules:
    - host: example.com  # 적절한 호스트 이름으로 변경
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krampoline
                port:
                  number: 3000
